--- a/blog/blog-jar/pom.xml
+++ b/blog/blog-jar/pom.xml
@@ -59,5 +59,11 @@
       <version>${core.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.silverpeas.core.ejb-core</groupId>
+      <artifactId>tagcloud</artifactId>
+      <version>${core.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
